--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
+  testImplementation 'org.spockframework:spock-spring:2.0-groovy-3.0'
+
 }
 
 tasks.named('test') {
