--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 HELP.md
+.gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
@@ -12,6 +13,7 @@ build/
 .settings
 .springBeans
 .sts4-cache
+bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
